flyte-sandbox/upstream/ingress-flytesystem.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /console
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: flytesystem
  namespace: flyte
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: flyteconsole
                port:
                  number: 80
            path: /__webpack_hmr
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 81
            path: /flyteidl.service.AdminService
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 81
            path: /flyteidl.service.AuthMetadataService
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 81
            path: /flyteidl.service.IdentityService
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 87
            path: /openapi
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteconsole
                port:
                  number: 80
            path: /console
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteconsole
                port:
                  number: 80
            path: /console/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /api
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /api/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /healthcheck
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /v1/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 87
            path: /openapi/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /.well-known/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /login
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /login/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /logout
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /logout/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /callback
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /callback/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /me
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /config
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /config/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /oauth2
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 80
            path: /oauth2/*
            pathType: ImplementationSpecific
